# fotoxi

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.fi.md  README.md  alembic.ini  fotoxi.py  pyproject.toml
backend/: config.py  main.py
backend/api/: routes.py  websocket.py
backend/db/: models.py  queries.py  session.py
backend/grouping/: duplicates.py
backend/indexer/: ai_thumbs.py  analyzer.py  eviction.py  exif.py  hasher.py  orchestrator.py  scanner.py  thumbnailer.py
backend/migrations/: env.py
backend/migrations/versions/: 29c29d0f7195_add_custom_tag_column.py  46959e7d780d_add_status_changed_at_remove_updated_at_.py  56983aeb697d_initial_schema.py  70f8fd02bc8c_add_ai_colors_and_ai_scene_type.py  adb9a2bb8140_add_multilingual_ai_description_fields.py
docs/: index.html
docs/superpowers/plans/: 2026-03-14-fotoxi-implementation.md
docs/superpowers/specs/: 2026-03-14-fotoxi-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: FilterBar.tsx  FolderBrowser.tsx  ImageCompare.tsx  ProgressBar.tsx
frontend/src/i18n/: en.json  fi.json  useTranslation.ts
frontend/src/pages/: Duplicates.tsx  Indexing.tsx  Search.tsx  Settings.tsx  Stats.tsx
tests/: test_analyzer.py  test_api.py  test_duplicates.py  test_eviction.py  test_exif.py  test_fts.py  test_hasher.py  test_models.py  test_orchestrator.py  test_queries.py  test_scanner.py  test_thumbnailer.py
